--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,16 @@
         <maven.compiler.target>23</maven.compiler.target>
         <maven.compiler.source>23</maven.compiler.source>
         <junit.version>5.11.3</junit.version>
-        <aspectj.version>1.9.22.1</aspectj.version>
+        <aspectj.version>1.9.24</aspectj.version>
         <allure.version>2.29.0</allure.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.32.0</version>
+        </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
@@ -34,7 +39,7 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>7.6.0</version>
+            <version>7.7.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -66,6 +71,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.16</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.4</version>
         </dependency>
     </dependencies>
     <build>
