--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.applitools</groupId>
+            <artifactId>eyes-selenium-java5</artifactId>
+            <version>5.80.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
